<resources>
    <string name="app_name">Club Connect</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="Password">Password</string>
    <string name="login">Log in</string>
    <string name="TODO">TODO</string>
    <string name="hello">hello</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_an_account">Create an account</string>
    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="user_type_prompt">Select User Type</string>
    <string name="user_page">user page</string>
    <string name="admin">admin</string>
    <string name="TO">TODO</string>
    <string name="forgot">forgot Password</string>
    <string name="add_new_items">Add New Items</string>
    <string name="switch_for_enabling_notifications">Switch for enabling notifications</string>
    <string name="o">O</string>
    <string name="pick_up_now">Pick up now</string>
    <string name="off">OFF</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="upload">Upload</string>

</resources>