<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#EAE6F4"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/create_an_account"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""

        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#FF9E80"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""

        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="#FF9E80"
        tools:ignore="VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/user_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edittext"
        android:layout_marginTop="16dp"
        android:entries="@array/user_type_items"
        android:minHeight="48dp"
        android:prompt="@string/user_type_prompt"
        android:textColor="@color/purple_200"
        android:textColorHint="#F1EAEA" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints=""

        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#FF9E80"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:text="@string/register"

        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/Register_loginButton"
        android:layout_width="165dp"
        android:layout_height="67dp"
        android:text="@string/Login" />

</LinearLayout>
