<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/TO"
        />


    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#34073C"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"

        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#3C0845"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edittext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"

        android:layout_marginLeft="40dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/log_in"
        android:textColor="#FFCDD2"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="258dp"
        android:minHeight="48dp"
        android:text="@string/don_t_have_an_account_register_now"
        android:textColor="#FFCDD2"
        tools:ignore="TouchTargetSizeCheck,VisualLintOverlap,VisualLintButtonSize" />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="589dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="118dp"
        android:backgroundTint="#D1B3D6"
        android:text="@string/forgot"
        android:textColor="#37474F"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck,TextSizeCheck" />


</RelativeLayout>
