<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAAFE1"
    tools:context=".postImage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_margin="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:text="Post an Event"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/ChooseImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:background="#B37DB0">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_baseline_photo_camera_24" />
            </RelativeLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/switch_for_enabling_notifications"
                tools:ignore="ExtraText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:text="Describe more about your event"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/item_name"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/item_description"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ItemDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/pick_up_now"
                android:textColor=" #1C1B1F"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/switch_for_enabling_notifications"
                android:switchMinWidth="56dp"
                android:textOff="@string/off"
                android:textOn="@string/o"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </RelativeLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/UploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textColor="#263238"
        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>